test/arrays/bradc/errors/badArrArgErrMsg.future
error message: formal array argument w/ query domain element type

This is getting better, but could be better still in terms of the
candidates.  I've updated the .good message.


Original message:

Here's an unresolved call error message involving arrays that
could stand to be cleaned up a bit.  Currently reveals a bit
too much of our internal laundry.  I put a placeholder into the
.good file, but am open to many other options cleaner than what
we currently generate:

Error: Unresolved call 'foo(:_array(_aarray(complex,_literal_int),complex,_literal_int,_domain(_adomain(_literal_int),_literal_int)))' (test/arrays/bradc/badArrArgErrMsg.chpl:6)
  called from __init_badArrArgErrMsg (test/arrays/bradc/badArrArgErrMsg.chpl:6)
  called from main (test/arrays/bradc/badArrArgErrMsg.chpl:-1)
Candidates are:
  foo(X: _array) (test/arrays/bradc/badArrArgErrMsg.chpl:8)